--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <img src="img/image31.png" alt="">
           </div>
           <div class="rest" onclick="andy()">
-            <img src="img/image.png" alt="">
+            <img src="img/image32.png" alt="">
           </div>
         </div>
       </nav>
@@ -214,7 +214,7 @@
             </select>
             <input type="date" name="" id="" />
             <input type="time" name="" id="" />
-            <button>Book Now</button>
+            <button><span>Book Now</span></button>
           </div>
         </div>
       </div>
@@ -271,7 +271,7 @@
             </p>
             <div class="email-sect">
               <input type="email" placeholder="Your Email" />
-              <button>Subscribe</button>
+              <button><span>Subscribe</span></button>
             </div>
           </div>
         </div>
@@ -394,6 +394,9 @@
             <img src="img/image30.png" alt="" width="20px">
           </div>
         </div>
+      </div>
+      <div class="color-img">
+        <img src="img/image.png" alt="" width="30px">
       </div>
     </footer>
     <script src="js/script.js"></script>
