--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <nav class="navbar">
         <div class="nav-container">
           <div class="logo"><img src="img/image1.png" alt="" /></div>
-          <div class="nav-all">
+          <div class="nav-all fade-in-top">
             <ul class="nav-menu">
               <li><a href="#">Home</a></li>
               <li><a href="#">About</a></li>
